--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<!-- <img src="https://live.staticflickr.com/7072/7292456132_46b3a78099_z.jpg" alt="Harry Potter" class="avatar" /> -->
 <body>
-
+  
+<!-- https://live.staticflickr.com/7072/7292456132_46b3a78099_z.jpg -->
     <div class="tinder-card">
     <header class="tinder-header">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRU2EEV5ZgE_gQhb7QRcnqdj_ESOUiNO0fymQ&s" alt="Tinder logo" class="logo">
@@ -30,7 +30,7 @@
     <section class="info">
       <h1>Harry, <span>18</span></h1>
       <p class="distance">14 miles away</p>
-      <p class="bio">Yes, I’m the Harry Potter. The camera just caught me on a bad hair day.</p>
+      <p class="bio">Yes, I’m <strong>the</strong> Harry Potter. The camera just caught me on a bad hair day.</p>
     </section>
   </div>
 
