--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfil de Harry Potter</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-  
-<!-- https://live.staticflickr.com/7072/7292456132_46b3a78099_z.jpg -->
-    <div class="tinder-card">
+
+  <!-- https://live.staticflickr.com/7072/7292456132_46b3a78099_z.jpg -->
+  <div class="tinder-card">
     <header class="tinder-header">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRU2EEV5ZgE_gQhb7QRcnqdj_ESOUiNO0fymQ&s" alt="Tinder logo" class="logo">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRU2EEV5ZgE_gQhb7QRcnqdj_ESOUiNO0fymQ&s"
+        alt="Tinder logo" class="logo">
       <div class="icons">
         <div>
           <i class="fa-solid fa-gear"></i>
@@ -35,4 +40,5 @@
   </div>
 
 </body>
+
 </html>
